--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "deploy": "npm run build && touch out/.nojekyll"
+    "deploy": "npm run build && echo > out/.nojekyll && gh-pages -d out"
   },
   "keywords": [
     "portfolio",
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.4.4",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.7.2"
   }
 }
